--- a/views/login.hbs
+++ b/views/login.hbs
@@ -42,7 +42,7 @@
 <body style="background: #eee;">
     <div class="align-vert">
         <div class="card" style="width: 18rem;">
-            <form action="/users/login" method="POST">
+            <form action="https://august-backend.herokuapp.com/users/login" method="POST">
                 <div class="form-group">
                     <label for="username">Username</label>
                     <input type="text" class="form-control" name="username" required><br>
