--- a/views/signUp.hbs
+++ b/views/signUp.hbs
@@ -41,7 +41,7 @@
 <body style="background: #eee;">
     <div class="align-vert">
         <div class="card" style="width: 23rem;">
-            <form action="/users/createuser" method="POST">
+            <form action="https://august-backend.herokuapp.com/users/createuser" method="POST">
                 <div class="form-group">
                     <label for="username">Username</label><br>
                     <input type="text" class="form-control" name="username" id="username" required><br>
